--- a/index.html
+++ b/index.html
@@ -1404,15 +1404,6 @@
     </div>
     </div>
 
-    <!-- Modal for Activity Log -->
-    <div id="activityLogModal" style="display: none; position: fixed; z-index: 10000; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.75); backdrop-filter: blur(15px); overflow-y: auto;">
-    <div style="background: white; margin: 3% auto; padding: 45px; width: 92%; max-width: 800px; border-radius: 35px; position: relative;">
-    <span onclick="document.getElementById('activityLogModal').style.display='none'" style="position: absolute; top: 20px; left: 25px; color: var(--danger); font-size: 45px; cursor: pointer;">&times;</span>
-    <h3 style="color: #34495e; font-size: 1.8rem; margin-bottom: 30px; text-align: center;">📋 سجل العمليات</h3>
-    <div id="activityLogContent" style="max-height: 500px; overflow-y: auto;"></div>
-    </div>
-    </div>
-
     <!-- Modal for Login -->
     <div id="loginModal" style="display: none; position: fixed; z-index: 10000; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(135deg, rgba(26, 82, 118, 0.95) 0%, rgba(52, 152, 219, 0.95) 100%); backdrop-filter: blur(20px); overflow-y: auto;">
     <div style="background: white; margin: 5% auto; padding: 50px; width: 92%; max-width: 500px; border-radius: 35px; position: relative; box-shadow: 0 25px 80px rgba(0,0,0,0.4);">
@@ -1492,43 +1483,6 @@
     <div style="display:flex; gap:15px; margin-top:35px;">
     <button id="applyDateFilterBtn" class="btn" style="flex:1; padding:18px; font-size: 1.1rem; background: linear-gradient(135deg, var(--primary) 0%, var(--info) 100%); color: white;">✅ تطبيق الفلتر</button>
     <button onclick="clearDateFilter()" class="btn" style="flex:1; padding:18px; font-size: 1.1rem; background: linear-gradient(135deg, var(--warning) 0%, #d68910 100%); color: white;">🔄 إعادة تعيين</button>
-    </div>
-    </div>
-    </div>
-
-    <!-- Modal for Status Change -->
-    <div id="statusChangeModal" style="display: none; position: fixed; z-index: 10000; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.75); backdrop-filter: blur(15px); overflow-y: auto;">
-    <div style="background: white; margin: 5% auto; padding: 45px; width: 92%; max-width: 550px; border-radius: 35px; position: relative;">
-    <span onclick="document.getElementById('statusChangeModal').style.display='none'" style="position: absolute; top: 20px; left: 25px; color: var(--danger); font-size: 45px; cursor: pointer;">&times;</span>
-    <h3 style="color: #8e44ad; font-size: 1.8rem; margin-bottom: 30px; text-align: center;">🔄 تغيير حالة الطلب</h3>
-
-    <div class="input-group">
-    <label style="font-size: 1.1rem; color: #8e44ad;">اختر الحالة الجديدة:</label>
-    <select id="newStatusSelect" style="padding: 18px; border-radius: 12px; border: 3px solid #8e44ad; width: 100%; font-size: 1.1rem; font-weight: 700; color: #8e44ad;">
-    <option value="pending">⏳ قيد المراجعة</option>
-    <option value="approved">✓ تم القبول</option>
-    <option value="coded">✅ تم التكويد</option>
-    <option value="delivered">🎉 تم التسليم</option>
-    </select>
-    </div>
-
-    <div class="input-group">
-    <label style="font-size: 1.1rem; color: #8e44ad;">ملاحظة (اختياري):</label>
-    <textarea id="statusNote" rows="3" placeholder="أضف ملاحظة..." style="padding: 16px; border-radius: 12px; border: 2px solid var(--glass-border); width: 100%; font-size: 1rem;"></textarea>
-    </div>
-
-    <!-- WhatsApp Notification Checkbox -->
-    <div style="background: linear-gradient(135deg, rgba(37, 211, 102, 0.1) 0%, rgba(34, 197, 94, 0.1) 100%); padding: 20px; border-radius: 15px; margin: 25px 0; border: 2px solid rgba(37, 211, 102, 0.3);">
-    <label style="display: flex; align-items: center; justify-content: center; gap: 12px; cursor: pointer; font-size: 1.1rem; color: #16a34a; font-weight: 700;">
-    <input type="checkbox" id="sendWhatsAppStatus" checked style="width: 24px; height: 24px; cursor: pointer; accent-color: #16a34a;">
-    <span>📱 إرسال إشعار واتساب للمواطن</span>
-    </label>
-    <small style="display: block; text-align: center; color: #666; margin-top: 10px; font-size: 0.9rem;">سيتم إرسال تحديث الحالة</small>
-    </div>
-
-    <div style="display:flex; gap:15px; margin-top:35px;">
-    <button id="confirmStatusChangeBtn" class="btn" style="flex:1; padding:18px; font-size: 1.1rem; background: linear-gradient(135deg, #8e44ad 0%, #9b59b6 100%); color: white;">✅ تأكيد التغيير</button>
-    <button onclick="document.getElementById('statusChangeModal').style.display='none'" class="btn" style="flex:1; padding:18px; font-size: 1.1rem; background: linear-gradient(135deg, var(--danger) 0%, #c0392b 100%); color: white;">❌ إلغاء</button>
     </div>
     </div>
     </div>
@@ -3111,21 +3065,13 @@
     <td style="padding: 3px 2px; background: rgba(255, 255, 255, 0.85); font-weight:bold; font-size:0.85rem; color:${item.vCode ? 'var(--secondary)' : 'var(--danger)'}">${item.vCode || '-'}</td>
     <td style="padding: 3px 2px; background: rgba(255, 255, 255, 0.85);"><button class="btn view-btn" style="background:rgba(26, 82, 118, 0.12); color:var(--primary); padding:3px 6px; font-weight:600; font-size:0.6rem;">🖼️ (${item.images ? item.images.length : 0})</button></td>
     <td style="padding: 3px 2px; background: rgba(255, 255, 255, 0.85); display:flex; gap:2px; flex-wrap:wrap;">
-    <button class="btn btn-status" title="تغيير الحالة" style="padding:3px 5px; background: linear-gradient(135deg, #8e44ad 0%, #9b59b6 100%); color: white; display: ${userRole === 'VIEWER' ? 'none' : 'inline-flex'}; font-size:0.65rem;">🔄</button>
     <button class="btn btn-code" title="تكويد" style="padding:3px 5px; background: linear-gradient(135deg, var(--info) 0%, #2874a6 100%); color: white; display: ${userRole === 'VIEWER' ? 'none' : 'inline-flex'}; font-size:0.65rem;">🔢</button>
     <button class="btn btn-edit" title="تعديل" style="padding:3px 5px; background: linear-gradient(135deg, var(--warning) 0%, #d68910 100%); color: white; display: ${userRole === 'VIEWER' ? 'none' : 'inline-flex'}; font-size:0.65rem;">✏️</button>
+    <button class="btn btn-copy" title="نسخ البيانات" style="padding:3px 5px; background: linear-gradient(135deg, #16a085 0%, #1abc9c 100%); color: white; font-size:0.65rem;">📋</button>
+    <button class="btn btn-download-all" title="تحميل الكل" style="padding:3px 5px; background: linear-gradient(135deg, #27ae60 0%, #2ecc71 100%); color: white; font-size:0.65rem;">📥</button>
     <button class="btn btn-del" title="حذف" style="padding:3px 5px; background: linear-gradient(135deg, var(--danger) 0%, #c0392b 100%); color: white; display: ${userRole === 'SUPER' ? 'inline-flex' : 'none'}; font-size:0.65rem;">🗑️</button>
-    <button class="btn btn-log" title="سجل العمليات" style="padding:3px 5px; background: linear-gradient(135deg, #34495e 0%, #2c3e50 100%); color: white; font-size:0.65rem;">📋</button>
     </td>
     `;
-
-    tr.querySelector('.btn-status').onclick = async () => {
-    document.getElementById('statusChangeModal').style.display = 'block';
-    document.getElementById('newStatusSelect').value = item.status || 'pending';
-    document.getElementById('statusNote').value = '';
-    document.getElementById('sendWhatsAppStatus').checked = true;
-    window.currentStatusChangeItem = { item, id };
-    };
 
     tr.querySelector('.btn-code').onclick = async () => {
     if (item.vCode) {
@@ -3991,52 +3937,6 @@
     window.showCodedOrders = showCodedOrders;
     window.showPendingOrders = showPendingOrders;
     window.showComplaintsTable = showComplaintsTable;
-
-    // Show Activity Log
-    function showActivityLog(item) {
-    const modal = document.getElementById('activityLogModal');
-    const content = document.getElementById('activityLogContent');
-    const history = item.statusHistory || [];
-
-    let html = `
-    <div style="background: linear-gradient(135deg, rgba(52, 73, 94, 0.1) 0%, rgba(44, 62, 80, 0.1) 100%); padding: 20px; border-radius: 15px; margin-bottom: 20px; border: 2px solid #34495e;">
-    <h4 style="color: #34495e; margin: 0 0 10px 0;">معلومات الطلب:</h4>
-    <p style="margin: 5px 0;"><strong>المالك:</strong> ${item.owner}</p>
-    <p style="margin: 5px 0;"><strong>الرقم المرجعي:</strong> ${item.refNumber || 'N/A'}</p>
-    <p style="margin: 5px 0;"><strong>نوع المركبة:</strong> ${item.vType}</p>
-    </div>
-    `;
-
-    if (history.length === 0) {
-    html += '<p style="text-align: center; color: #999; padding: 40px;">لا يوجد سجل عمليات</p>';
-    } else {
-    html += '<div style="position: relative; padding-right: 30px;">';
-    history.forEach((log, index) => {
-    const statusInfo = window.getStatusDisplay(log.status);
-    const isLast = index === history.length - 1;
-    html += `
-    <div style="position: relative; margin-bottom: 25px;">
-    <div style="position: absolute; right: -30px; top: 0; width: 20px; height: 20px; background: ${statusInfo.color}; border-radius: 50%; border: 3px solid white; box-shadow: 0 2px 8px rgba(0,0,0,0.2);"></div>
-    ${!isLast ? '<div style="position: absolute; right: -21px; top: 20px; width: 2px; height: calc(100% + 25px); background: #ddd;"></div>' : ''}
-    <div style="background: white; padding: 20px; border-radius: 15px; border: 2px solid ${statusInfo.color}; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
-    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
-    <span style="background: ${statusInfo.color}; color: white; padding: 6px 12px; border-radius: 8px; font-weight: bold; font-size: 0.9rem;">${statusInfo.icon} ${statusInfo.text}</span>
-    <span style="color: #999; font-size: 0.85rem;">${window.formatDateTime(log.timestamp)}</span>
-    </div>
-    ${log.note ? `<p style="margin: 10px 0 0 0; color: #555; line-height: 1.6;">${log.note}</p>` : ''}
-    ${log.by ? `<p style="margin: 10px 0 0 0; color: #999; font-size: 0.85rem;">بواسطة: ${log.by === 'SUPER' ? '👑 مدير عام' : log.by === 'ADMIN' ? '🔧 مشرف' : log.by}</p>` : ''}
-    </div>
-    </div>
-    `;
-    });
-    html += '</div>';
-    }
-
-    content.innerHTML = html;
-    modal.style.display = 'block';
-    }
-
-    window.showActivityLog = showActivityLog;
 
     // Date Filter
     let dateFilterActive = false;
