--- a/index.html
+++ b/index.html
@@ -786,12 +786,14 @@
     
     <!-- الجانب الأيمن: الشعارات والعنوان -->
     <div style="display: flex; align-items: center; gap: 12px; flex: 0 0 auto;">
+    <div style="display: flex; gap: 12px;">
     <img src="https://i.postimg.cc/Hs92TtbL/41jjsn4SHDL-AC-UF894-1000-QL80.jpg" 
     style="width: 55px; height: 55px; object-fit: contain; border-radius: 8px; box-shadow: 0 3px 12px rgba(0,0,0,0.4); background: white; padding: 4px; border: 2px solid rgba(255,255,255,0.6);" 
     alt="علم مصر">
     <img src="https://i.postimg.cc/brFBgHg7/Flag-of-Sharkiya-Governorate.png" 
     style="width: 55px; height: 55px; object-fit: contain; border-radius: 8px; box-shadow: 0 3px 12px rgba(0,0,0,0.4); background: white; padding: 4px; border: 2px solid rgba(255,255,255,0.6);" 
     alt="علم الشرقية">
+    </div>
     <div class="header-title" style="min-width: 180px;">
     <h1 style="font-size: 1.1rem; margin: 0; line-height: 1.3;">🏛️ رئاسة مركز ومدينة كفر صقر</h1>
     <small style="font-size: 0.85rem; opacity: 0.95; color: #d4af37; font-weight: 600;">د/ أحمد المقدم</small>
@@ -852,52 +854,74 @@
     <style>
     @media (max-width: 768px) {
     header {
-    padding: 15px 20px !important;
+    padding: 10px 15px !important;
     }
     header > div {
     flex-direction: column !important;
-    align-items: stretch !important;
-    gap: 15px !important;
+    align-items: center !important;
+    gap: 10px !important;
     }
     header > div > div:first-child {
     justify-content: center !important;
+    flex-direction: column !important;
+    align-items: center !important;
+    gap: 8px !important;
+    }
+    header > div > div:first-child > div:first-child {
+    display: flex;
+    gap: 10px;
     }
     header > div > div:first-child img {
-    width: 50px !important;
-    height: 50px !important;
+    width: 40px !important;
+    height: 40px !important;
+    }
+    .header-title {
+    text-align: center !important;
+    min-width: auto !important;
     }
     .header-title h1 {
-    font-size: 1rem !important;
+    font-size: 0.85rem !important;
     line-height: 1.3 !important;
     }
     .header-title small {
-    font-size: 0.8rem !important;
+    font-size: 0.7rem !important;
     }
     #leadershipSection {
-    flex-wrap: wrap !important;
+    display: grid !important;
+    grid-template-columns: 1fr 1fr !important;
     gap: 15px !important;
-    padding: 12px 15px !important;
+    padding: 15px !important;
     justify-content: center !important;
+    top: 95px !important;
     }
     .leadership-item {
     flex: 0 0 auto !important;
     }
     .leadership-item img {
-    width: 65px !important;
-    height: 65px !important;
+    width: 60px !important;
+    height: 60px !important;
     }
     .leadership-item span:first-of-type {
-    font-size: 0.75rem !important;
+    font-size: 0.65rem !important;
+    white-space: normal !important;
     }
     .leadership-item span:last-of-type {
-    font-size: 0.65rem !important;
+    font-size: 0.55rem !important;
+    white-space: normal !important;
     }
     header > div > div:last-child {
     justify-content: center !important;
+    width: 100% !important;
     }
     header button {
-    padding: 8px 14px !important;
-    font-size: 0.8rem !important;
+    padding: 6px 10px !important;
+    font-size: 0.7rem !important;
+    }
+    body {
+    padding-top: 280px !important;
+    }
+    body.admin-mode {
+    padding-top: 110px !important;
     }
     }
     </style>
