--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     ═══════════════════════════════════════════════════════════════
     🔒 نظام آمن ومحمي بالكامل
     
-    م/ مهند التهامي - 01021102607
     ═══════════════════════════════════════════════════════════════
     -->
     <html lang="ar" dir="rtl">
@@ -1449,8 +1448,8 @@
     <!-- أزرار الفلترة حسب نوع المركبة -->
     <div style="display: flex; gap: 10px; margin-bottom: 20px; flex-wrap: wrap; justify-content: center;">
     <button onclick="window.filterByVehicleType('all')" class="btn" style="padding: 12px 25px; background: linear-gradient(135deg, #3498db 0%, #2874a6 100%); color: white; font-weight: 600; border-radius: 12px;">📋 الكل</button>
-    <button onclick="window.filterByVehicleType('tuktuk')" class="btn" style="padding: 12px 25px; background: linear-gradient(135deg, #f39c12 0%, #d68910 100%); color: white; font-weight: 600; border-radius: 12px;">🛺 توكتوك فقط</button>
-    <button onclick="window.filterByVehicleType('microbus')" class="btn" style="padding: 12px 25px; background: linear-gradient(135deg, #27ae60 0%, #229954 100%); color: white; font-weight: 600; border-radius: 12px;">🚐 ميكروباص فقط</button>
+    <button onclick="window.filterByVehicleType('tuktuk')" class="btn" style="padding: 12px 25px; background: linear-gradient(135deg, #f39c12 0%, #d68910 100%); color: white; font-weight: 600; border-radius: 12px;">🛺 توكتوك </button>
+    <button onclick="window.filterByVehicleType('microbus')" class="btn" style="padding: 12px 25px; background: linear-gradient(135deg, #27ae60 0%, #229954 100%); color: white; font-weight: 600; border-radius: 12px;">🚐 ميكروباص </button>
     </div>
 
     <!-- Filter Status Message -->
